fix font size on mobile

--- a/static/results.css
+++ b/static/results.css
@@ -136,6 +136,7 @@
     .description{
         margin-left: 5%;
         width: 60%;
+        font-size: 4.5vw;
     }
     
     .colum-names{
